# assetra

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  paper.md  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: draft-pdf.yml  publish.yaml  test.yaml  tests.yml
assetra/: __init__.py  adequacy_metrics.py  contribution.py  contribution_metrics.py  core.py  energy_source.py  energy_system.py  metrics.py  probabilistic_analysis.py  resource_adequacy.py  simulation.py  system.py  units.py
assetra/preprocessing/: data_loader.py
docs/: Makefile  assetra.contribution.rst  assetra.metrics.rst  assetra.simulation.rst  assetra.system.rst  assetra.units.rst  conf.py  contribute.rst  contributing.rst  index.rst  installation.rst  make.bat  modules.rst  reference.rst  reframe-2023-02-22  srs.odt  usage.rst
docs/_static/: assetra-class-interface  assetra-class-interface.drawio  assetra-inherited-types.drawio
examples/: 00_basic_use.ipynb  01_preprocessing.ipynb  preprocessing.py
examples/00_basic_use/: basic_example.ipynb
examples/01_california/: 01_balancing_authority.ipynb  ciso_example.ipynb
examples/02_custom_unit/: mttf-example.ipynb
examples/03_basic_hydro_use/: basic_example_plus_hydro.ipynb  (+2 more)
joss/: paper.bib  paper.md
powersys/: DataLoader.py  Fleet.py  PowerSystem.py  ProjectManager.py  Region.py  __init__.py  cli.py  transmission_system.py
tests/: __init__.py  test_assetra.py  test_data_loading.py  test_powersys.py  test_timing.py
(+20 files in other folders)
