[tool.poetry]
name = "assetra"
version = "0.1.0"
description = "ASSET Lab Resource Adequacy Package"
authors = [
	"Isaac Bromley-Dulfano <ijbd@umich.edu>",
	"Srihari Sundar <sriharis@umich.edu>"
]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
pandas = "^1.4.4"
openpyxl = "^3.0.10"
dask = "^2023.1.0"
xarray = "^2023.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
