[tool.poetry]
name = "assetra"
version = "1.0.0"
description = "ASSET Lab Resource Adequacy Package"
authors = [
	"Isaac Bromley-Dulfano <ijbd@umich.edu>",
	"Srihari Sundar <sriharis@umich.edu>"
]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
openpyxl = "^3.0.10"
xarray = "^2023.2.0"
netCDF4 = "^1.6.2"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
