[tool.poetry]
name = "assetra"
version = "1.0.3"
description = "ASSET Lab Resource Adequacy Package"
authors = [
	"Isaac Bromley-Dulfano <ijbd@umich.edu>",
	"Srihari Sundar <sriharis@umich.edu>"
]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
netCDF4 = "^1.7.2"
xarray = "^2024.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
